--- a/.env
+++ b/.env
@@ -23,15 +23,16 @@ LANGUAGE=zh  # 系统语言
 # 数据存储配置
 # =============================================
 
-DB_PATH=./elements.db  # 数据库文件路径
-MD_FILE_PATH=./elements.md  # Markdown文档路径
+DB_PATH=data\elements.db  # 数据库文件路径
+MD_FILE_PATH=data\elements.md  # Markdown文档路径
 
 # =============================================
 # 截图配置
 # =============================================
 
-SCREENSHOT_DIR=./screenshots  # 截图保存目录
+SCREENSHOT_DIR=screenshots  # 截图保存目录
 
+TEMPLATE_DIR=template  # 弹窗模版保存目录,这个是在api目录下
 # =============================================
 # 视觉模型服务配置
 # =============================================
