--- a/.env_example
+++ b/.env_example
@@ -50,4 +50,4 @@ TMP_DIR=tmp
 # 视觉模型API地址
 VISION_MODEL_API_URL=https://api.siliconflow.cn/v1/chat/completions
 # 视觉模型API密钥
-VISION_MODEL_API_KEY=sk-zafnbxurejufbttexishorztzosodrxapcxcthqujzxkdmnh
+VISION_MODEL_API_KEY=
